<resources>
    <string name="app_name">AlumniCircle</string>

    <string name="network_error_tips">请检查您的网络连接</string>
    <string name="common_empty_msg">抱歉,暂未获取到数据!\n请点击屏幕重试~</string>
    <string name="common_error_msg">抱歉,系统出错了!\n请点击屏幕重试~</string>
    <string name="common_no_network_msg">暂未连接上网络!\n请连接后点击屏幕重试~</string>
    <string name="common_loading_message">正在加载中...</string>
    <string name="request_time_out">请求超时，请检查网络连接</string>
    <string name="warn">提示</string>

    <string name="alumni_circle">校友圈</string>

    <!--login-->
    <string name="user_hint">手机号</string>
    <string name="password">密码</string>
    <string name="login">登 录</string>
    <string name="login_success"></string>
    <string name="weixin_login">微信登录</string>
    <string name="register_user">注册账号</string>
    <string name="login_agree">登录或注册即同意</string>
    <string name="user_service_agree">《用户服务协议》</string>
    <string name="back">返回</string>
    <string name="phone">手机</string>
    <string name="phone_hint">注册手机号码</string>
    <string name="password_hint">6-12位</string>
    <string name="school_year">入学</string>
    <string name="school_year_hint">入学年份</string>
    <string name="college">学院</string>
    <string name="college_hint">请选择你的学院</string>
    <string name="major">专业</string>
    <string name="major_hint">请选择你的专业</string>
    <string name="register">注册</string>
    <string name="register_1">注 册</string>
    <string name="forget_password">忘记密码</string>
    <string name="ensure">确定</string>

    <!-- circle-->
    <string name="circle">圈子</string>
    <string name="topic">话题</string>
    <string name="partici_topic">参与话题</string>
    <string name="dynamic_text">动态正文</string>
    <string name="share">分享</string>
    <string name="agree">赞</string>
    <string name="comment">评论</string>

    <!-- contacts-->
    <string name="contacts">人脉</string>
    <string name="new_friend">新的好友</string>
    <string name="alumni_good">校友大咖</string>
    <string name="search_hint">校友号/手机号/微信号</string>
    <string name="receive">接收</string>
    <string name="watch">关注</string>
    <string name="phone_contacts">手机联系人</string>
    <string name="phone_contacts_hint">添加或邀请手机通讯录中联系人</string>
    <string name="alumni_num">校友号</string>
    <string name="alumni_num_hint">邀请校友圈联系人</string>
    <string name="scan">扫一扫</string>
    <string name="scan_hint">扫二维码添加好友</string>

    <!-- me-->
    <string name="me">我</string>
    <string name="add_friend">加好友</string>
    <string name="add_friend_">添加好友</string>
    <string name="alumni_number">校友号:</string>
    <string name="person_introduction">个人简介:</string>
    <string name="dynamic">动态:</string>
    <string name="dynamic_">个人动态</string>
    <string name="label">标签:</string>
    <string name="professional_experience">职业经历:</string>
    <string name="educational_experience">教育经历:</string>
    <string name="edit_information">编辑资料</string>
    <string name="my_qrcode">我的二维码</string>
    <string name="my_dynamic">我的动态</string>
    <string name="my_information">我的信息</string>
    <string name="my_collection">我的收藏</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <string name="exit_account">退出账号</string>
    <string name="photo">头像:</string>
    <string name="name_">姓名:</string>
    <string name="name">姓名</string>
    <string name="number">学号</string>
    <string name="number_">校友圈号:</string>
    <string name="number_hint">请填写学号</string>
    <string name="name_hint">请填写用户名</string>
    <string name="sex_">性别:</string>
    <string name="borth_year_">出生年月:</string>
    <string name="work_city_">工作城市:</string>
    <string name="job_prof_">行业职能:</string>
    <string name="company_">公司:</string>
    <string name="prof_">职位:</string>
    <string name="person_intro_">个人简介:</string>
    <string name="person_intro">个人简介</string>
    <string name="add_prof_exper">添加职业经历</string>
    <string name="company">公司</string>
    <string name="prof">职位</string>
    <string name="prof_exp">职业经历</string>
    <string name="edu_exp">教育经历</string>
    <string name="degree">学历:</string>
    <string name="degree_hint">填写学历名称(必填)</string>
    <string name="time_">时间:</string>
    <string name="must_write">必填</string>
    <string name="to">至</string>
    <string name="prof_describe_hint">填写职位描述，仅限50字内</string>
    <string name="prof_describe">职位描述</string>
    <string name="person_intro_hint">个人简介应不超过三十字</string>
    <string name="company_hint">公司名称应不超过二十字</string>
    <string name="job_hint">职位名称应不超过二十字</string>
    <string name="keep">保存</string>
    <string name="please_select">请选择</string>
    <string name="please_write">请填写</string>
    <string name="no_data">没有找到符合条件的房源</string>
    <string name="delete_edu">删除教育经历</string>
    <string name="add_edu">添加教育经历</string>
    <string name="delete_job">删除职业经历</string>
    <string name="school_">学校:</string>
    <string name="school_hint">填写学校名称(必填)</string>
    <string name="major_">专业:</string>
    <string name="major_hint_must">填写专业信息(必填)</string>
    <string name="edu_intro_hint">教育经历描述,仅限50字内</string>
    <string name="edu_describe">更多描述</string>

    <string name="send_messgae">发信息</string>
    <string name="friend_msg">好友验证</string>
    <string name="send">发送</string>
    <string name="delete">删除</string>

    <string name="contact_alreadyCreateAddRequest">请求已发送</string>
    <string name="push_add_request">您有新的好友申请</string>
    <string name="contact_sendRequestSucceed">发送请求成功，等待对方验证</string>
    <string name="invitation_action">com.avoscloud.chat.INVITATION_ACTION</string>

</resources>
