<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_8_margin"
        android:layout_marginRight="@dimen/activity_8_margin"
        android:layout_marginTop="@dimen/activity_24_margin"
        android:background="@drawable/text_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/activity_12_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_4_margin"
                android:text="@string/school_"
                android:textColor="@color/text_help"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_edu_school_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_8_margin"
                android:background="@null"
                android:hint="@string/school_hint"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/text_hint"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginLeft="@dimen/activity_16_margin"
            android:background="@color/divider_low" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/activity_12_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_4_margin"
                android:text="@string/major_"
                android:textColor="@color/text_help"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_edu_major_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_8_margin"
                android:background="@null"
                android:hint="@string/major_hint_must"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/text_hint"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginLeft="@dimen/activity_16_margin"
            android:background="@color/divider_low" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/activity_12_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_4_margin"
                android:text="@string/degree"
                android:textColor="@color/text_help"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_edu_degree_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_8_margin"
                android:background="@null"
                android:hint="@string/degree_hint"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/text_hint"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginLeft="@dimen/activity_16_margin"
            android:background="@color/divider_low" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_12_margin">

            <TextView
                android:id="@+id/help_edit_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_4_margin"
                android:text="@string/time_"
                android:textColor="@color/text_help"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/edit_edu_start_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_24_margin"
                android:layout_toRightOf="@+id/help_edit_time_tv"
                android:hint="请选择"
                android:textColor="@color/black"
                android:textColorHint="@color/text_hint"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/edit_edu_end_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_40_margin"
                android:layout_toRightOf="@+id/help_edit_to_tv"
                android:hint="请选择"
                android:textColor="@color/black"
                android:textColorHint="@color/text_hint"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/help_edit_to_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:text="@string/to"
                android:textColor="@color/text_hint"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_8_margin"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="@dimen/activity_8_margin"
        android:text="@string/edu_describe"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_edu_intro_et"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="@dimen/activity_8_margin"
        android:layout_marginRight="@dimen/activity_8_margin"
        android:background="@drawable/text_bg"
        android:gravity="start"
        android:hint="@string/edu_intro_hint"
        android:paddingBottom="@dimen/activity_8_margin"
        android:paddingLeft="@dimen/activity_16_margin"
        android:paddingRight="@dimen/activity_16_margin"
        android:paddingTop="@dimen/activity_8_margin"
        android:textColor="@color/black"
        android:textColorHint="@color/text_hint"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/edit_edu_delete_edu_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_24_margin"
        android:background="@color/white"
        android:paddingBottom="@dimen/activity_12_margin"
        android:paddingLeft="@dimen/activity_16_margin"
        android:paddingTop="@dimen/activity_12_margin"
        android:text="@string/delete_edu"
        android:textColor="@color/black" />

</LinearLayout>